src/test/resources/testcases/invalid/syntax/global_statement.tc
int x = 10;

x = 20; // 错误：赋值语句不能直接写在全局（顶层）

int main() {
    return 0;
}